Fixed top spacing donate (Ready to publish v.1)

--- a/wp-content/themes/LeVieuxMoulin/resources/css/general/donate.scss
+++ b/wp-content/themes/LeVieuxMoulin/resources/css/general/donate.scss
@@ -3,6 +3,7 @@
 
 .donate {
   line-height: 1.5rem;
+  padding-top: 2rem;
 
   h2 {
     font-size: 1.5rem;
